--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react_shop",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://seeoya.github.io/s_react_shop/",
+    "homepage": "https://seeoya.github.io/s_react_shop",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
